CHANGE, api base path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>CURSO de KOA</title>
+  <title>CURSO de APIs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- http://fontawesome.com/ -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
